# ephios_qualification_group_mappings

./: README.md  pyproject.toml
ephios_qualification_group_mappings/: apps.py  forms.py  models.py  signals.py  urls.py  views.py
ephios_qualification_group_mappings/locale/de/LC_MESSAGES/: django.po
